--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link rel="stylesheet" href="styles/styles.css">
+
     <title>ANANDA ETT</title>
 </head>
 <body>
         <!--Navbar------------------------------------------------------------------------------------------>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid col-xl-8 col-lg-10">
+          <div class="container-fluid col-11 col-xl-8 col-lg-10">
           <a class="navbar-brand" href="#!"><img src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo-col-paleta1-imagotipo.png?updatedAt=1691060745545" alt="" height="40"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -46,32 +47,28 @@
 
       <!---Call-to-action-1---------------------#417B5A--------------------->
       <section id="call-1" style="background-color:#DCDE31" class="d-flex flex-row justify-content-center py-2 px-3" style="">
-        <div class="d-flex flex-row justify-content-between text-dark col-12 col-xl-8 col-lg-10" style="">
+        <div class="d-flex flex-row justify-content-between text-dark col-11 col-xl-8 col-lg-10" style="">
             <span>¿Quieres saber por qué somos diferentes?<a href="#!" class="link-offset-2" style="color:black;text-decoration:none;"><strong> haz clic aquí <i class="bi bi-arrow-right"></i></strong></a></span>
             <a href="#!" class="icon-link" style="color:black"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
         </section>
 
       <!--Slide-md+----------------------------------------------------------------------------------------->
       <section id="slide" class="d-none d-md-flex flex-row justify-content-center bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider.jpg?updatedAt=1691055929606'); background-position: center; background-repeat: no-repeat; background-size:cover; max-height: 600px;">
-          <div class="row col-12 col-xl-8 col-lg-10">
-              <div class="container py-5 col">
-              <div class="row pt-md-2 pb-lg-2 justify-content-center">
+          <div class="d-flex flex-row justify-content-between col-11 col-xl-8 col-lg-10">
+              <div class="py-5 col-md-5">
                   <div class="text-start py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
                       <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete. Te ayudamos a encontrar un trabajo en el que te sientas bien.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right ms-2"></i></a></div>
                   </div>
               </div>
-              </div>
-              <div class="container py-5 col">
-                  <div class="row pt-md-2 pb-lg-2 justify-content-center">
+              <div class="py-5 col-md-5">
                   <div class="text-end py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
                       <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad. Más de 500 empresas ya confían en Ananda.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right ms-2"></i></a></div>
                   </div>
-                  </div>
-              </div>
+                </div>
           </div>
       </section>
 
@@ -112,7 +109,7 @@
 
 
             <!--Banner-1------------------------------------------------------------------------------------>
-      <section id="banner-presupuesto" class="d-flex flex-row justify-content-center my3" style="background-color:#022B3A;">
+      <section id="banner-presupuesto" class="d-flex flex-row justify-content-center my3" style="background-color:#417b5a;">
         <div class="d-flex flex-row justify-content-center my-5">
             <div class="d-flex flex-row justify-content-around col-12 col-lg-10">
                 <div class="d-none d-lg-flex flex-column text-center col-4 justify-content-center p-5" >
@@ -282,7 +279,7 @@
       <!--Testimonios-m------------------------------------------------------------------------------------------>
       <section id="testimonios" class="mt-5 py-3 py-sm-5 d-flex justify-content-center d-lg-none">
           <div class="row col-12 col-lg-10">
-              <h3 class="mb-5">Nos importa tu situación personal y objetivos</h3>
+              <h3 class="mb-5 text-center text-md-start">Nos importa tu situación personal y objetivos</h3>
               <div class="col-12 col-lg-3 m-2">
                   <div class="rounded-3 overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial1-mbl.jpg?updatedAt=1690825521641');background-size: cover; background-position:center; ">
                       <div class="container-fluid d-flex flex-column justify-content-center p-5">
@@ -607,6 +604,6 @@
               </div>
           </div>
       </section>
-
+      <script src="js/scripts.js"></script>
 </body>
 </html>
