--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
 
     <title>ANANDA ETT</title>
 </head>
@@ -46,10 +46,10 @@
       </nav>
 
       <!---Call-to-action-1---------------------hwb(146 25.5% 51.7%)--------------------->
-      <section id="call-1" style="background-color:hwb(61 19.1% 12.9%)" class="d-flex flex-row justify-content-center py-2 px-3" style="">
+      <section id="call-1" style="background-color:hwb(61 19.1% 12.9%)" class="d-none d-md-flex flex-row justify-content-center py-2 px-3" style="">
         <div class="d-flex flex-row justify-content-between text-dark col-11 col-xl-8 col-lg-10" style="">
             <span>¿Quieres saber por qué somos diferentes?<a href="#!" class="link-offset-2" style="color:black;text-decoration:none;"><strong> haz clic aquí <i class="bi bi-arrow-right"></i></strong></a></span>
-            <a href="#!" class="icon-link" style="color:black"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
+            <a id="call-1-closer" href="javascript:void()" class="icon-link" style="color:black"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
         </section>
 
       <!--Slide-md+----------------------------------------------------------------------------------------->
@@ -112,14 +112,14 @@
       <section id="banner-presupuesto" class="d-flex flex-row justify-content-center my3" style="background-color:hwb(146 25.5% 51.7%);">
         <div class="d-flex flex-row justify-content-center my-5">
             <div class="d-flex flex-row justify-content-around col-12 col-lg-10">
-                <div class="d-none d-lg-flex flex-column text-center col-4 justify-content-center p-5" >
-                    <img class="img-fluid" src="https://ik.imagekit.io/ehiyh7jvx/img/clock-history-8.png?updatedAt=1691049902805" >
+                <div class="d-none d-lg-flex flex-column text-center col-4 justify-content-center" >
+                    <div class="d-flex align-items-center justify-content-center"><img class="" style="height:auto;max-height:80%;width:auto;max-width:80%;" src="https://ik.imagekit.io/ehiyh7jvx/img/clock-history-8.png?updatedAt=1691049902805" ></div>
                 </div>
                 <div class="d-flex flex-column text-light col-10 col-lg-4">
                     <h6>¿necesitas trabajadores?</h6>
                     <h1 class="display-2" style="line-height:4rem"><strong>solicita tu presupuesto</strong> online.</h1>
                     <p>Solicita un presupuesto sin compromiso. Cubrimos el 93% de los contratos en 24 horas. Paga sólo por las horas trabajadas y por el tiempo que necesites al trabajador. Ahorra en costes derivados del absentismo laboral, vacaciones, matrimonios, indemnizaciones y permisos retribuidos; con todas las garantías laborales.</p>
-                    <a href="#!" class="btn btn-outline-light text-start">calcular presupuesto</a>
+                    <div class="d-inline-flex"> <a href="public/presupuesto-01.html" class="btn btn-outline-light text-start">calcular presupuesto</a></div>
                 </div>
             </div>
         </div>
@@ -348,8 +348,8 @@
                                       <i class="bi bi-people" style="font-size: 3rem; color:hwb(341 13% 42%);"></i>
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
-                                      <h5 style="color:hwb(341 13% 42%)">ETT</h5>
-                                      <h6 style="color:hwb(341 35% 32%)">Necesito un trabajador temporal para mañana.</h6>
+                                      <h4 style="color:hwb(341 13% 42%)">Trabajo Temporal</h4>
+                                      <h5 style="color:hwb(341 35% 32%)">Necesito un trabajador temporal para mañana.</h5>
                                       <p style="text-align:justify">
                                           Cuéntanos tus necesidades y nosotros nos encargamos del resto. ¿Necesitas cubrir una baja? ¿Tienes un pico de producción?... Buscamos al candidato que mejor se ajusta al perfil solicitado, lo contratamos, gestionamos el alta y los trámites burocráticos y te cedemos al trabajador en el menor tiempo posible y durante el tiempo que lo necesites para que tú puedas centrarte en hacer crecer tu negocio. Olvídate de absentismos, gestión de bajas o despidos.              
                                       </p>
@@ -366,8 +366,8 @@
                                       <i class="bi bi-pc-display" style="font-size: 3rem; color:hwb(341 13% 42%);"></i>
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
-                                      <h5 style="color:hwb(341 13% 42%)">Outsourcing </h5>
-                                      <h6 style="color:hwb(341 35% 32%)">Necesito externalizar los recursos humanos de mi empresa.</h6>
+                                      <h4 style="color:hwb(341 13% 42%)">Outsourcing </h4>
+                                      <h5 style="color:hwb(341 35% 32%)">Necesito externalizar los recursos humanos de mi empresa.</h5>
                                       <p style="text-align:justify">
                                           Nos encargamos de diseñar la plantilla que necesitas, analizando los perfiles psicológicos que mejor se adaptan y más valor añadido aportan al equipo. Buscamos a los mejores profesionales para el proyecto concreto, los contratamos, formamos y gestionamos todos los trámites burocráticos relacionados con la gestión de RRHH, para que tú puedas dedicarte al core de tu negocio y simplemente pagar una factura. Te ayudamos a que puedas aprovechar todas las oportunidades cuando surgen, proporcionándote flexibilidad y recursos humanos cuando los necesitas.
                                         </p>
@@ -383,8 +383,8 @@
                                       <i class="bi bi-check2-square" style="font-size: 3rem; color:hwb(341 13% 42%);"></i>
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
-                                      <h5 style="color:hwb(341 13% 42%)">Selección y evaluación talento</h5>
-                                      <h6 style="color:hwb(341 35% 32%)">Necesito contratar al profesional ideal.</h6>
+                                      <h4 style="color:hwb(341 13% 42%)">Selección y evaluación talento</h4>
+                                      <h5 style="color:hwb(341 35% 32%)">Necesito contratar al profesional ideal.</h5>
                                       <p style="text-align:justify">                                            
                                           Si necesitas contratar a un trabajador pero no tienes el tiempo o los recursos necesarios para llevar a cabo un proceso de búsqueda y selección de talento. Nosotros te ayudamos. Cuéntanos tus necesidades y nuestros consultores especializados en RRHH y psicólogos se encargarán de buscar y valorar a los candidatos hasta encontrar el mejor profesional para tu compañía y equipo. Gracias a nuestro método de evaluación de candidatos, te presentaremos a la persona ideal; aquella que reúne el conocimiento, la experiencia y los valores que estás buscando.
                                         </p>
