--- a/public/presupuesto-01.html
+++ b/public/presupuesto-01.html
@@ -11,172 +11,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
 
-    <title>ANANDA ETT</title>
+    <title>Calcula tu presupuesto</title>
 </head>
 <body>
-        <!--Navbar------------------------------------------------------------------------------------------>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid col-11 col-xl-8 col-lg-10">
-          <a class="navbar-brand" href="#!"><img src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo-col-paleta1-imagotipo.png?updatedAt=1691060745545" alt="" height="40"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link btn p-2 m-2" href="#!">SOY CANDIDATO</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link btn p-2 m-2" href="#!">SOY EMPRESA</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link btn p-2 m-2" href="#!">Oficinas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link btn p-2 m-2" href="#!">Valores</a>
-            </li>
-              <li class="nav-item">
-                  <a class="nav-link btn  btn-outline-light m-2 p-2" href="#!" style="background-color:hwb(341 13% 42%); color:white"><i class="bi bi-person" style="font-size: 1rem;"></i> Inicia sesión o regístrate</a>
-              </li>
-              </ul>
-          </div>
-          </div>
-      </nav>
+    <!--Navbar------------------------------------------------------------------------------------------>
+    <div include-html="../components/nav.html"></div>
+
+    <!--Título---------------------------------------------------------------------------------------------->
+    <div include-html="../components/presupuesto01/pr01header.html"></div>
+
+    <!--SERVICIOS-->
+    <div include-html="../components/presupuesto01/pr01servicios.html"></div>
+
+    <!--Footer-------------------------------------------------------------------------------------->
+    <div include-html="../components/footer.html"></div>
 
 
-
-
-
-
-      
-      <!--Footer------------------------------------------------------------------------------------------->
-      <section id="Footer" class="d-flex text-light p-3 justify-content-center" style="background-color:hwb(196 0.8% 77.2%)">
-        <div class="d-flex flex-wrap justify-content-between col-10">
-            <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
-                <h5>EMPLEO</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a rel="noopener noreferrer" href="#!" target="_blank"  style="text-decoration: none; color:white">Descárgate nuestra
-                            app</a>
-                    </li>
-                    <li>
-                        <a rel="noopener noreferrer" href="#!" target="_blank"  style="text-decoration: none; color:white">Regístrate
-                            en Adecco</a>
-                    </li>
-                    <li>
-                        <a href="#!"  style="text-decoration: none; color:white">Encuentra trabajo</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Ofertas de empleo</a>
-                    </li>
-                    <li>
-                        <a rel="noopener noreferrer" href="#!" target="_blank" style="text-decoration: none; color:white">Blog
-                            de empleo</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Trabaja en Adecco</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Formadores Adecco</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Preguntas Frecuentes</a>
-                    </li>
-                </ul>
-            </div>
-            <div  class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
-                <h5>CIUDADES</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Madrid</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Barcelona</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Valencia</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Sevilla</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Bilbao</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en San Sebastián</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Zaragoza</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en Las Palmas de Gran
-                            Canaria</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Empleo en A Coruña</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
-                <h5>EMPRESAS</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Trabajo temporal</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Outsourcing</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Reclutamiento y selección</a>
-                    </li>
-                    <a href="#!" style="text-decoration: none; color:white">Formación</a>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Consultoría</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Reforma Laboral</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Guía Salarial</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
-                <h5>CONTACTO</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Contacto Candidatos</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Contacto Empresas</a>
-                    </li>
-                    <li>
-                        <a href="#!" style="text-decoration: none; color:white">Localízanos</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
-                <h5>REDES</h5>
-                <a href="https://www.facebook.com/" class="linkrrss mx-2" name="Facebook" target="_blank" style="text-decoration: none; color:white">
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/" class="linkrrss mx-2" name="Instagram" target="_blank" style="text-decoration: none; color:white">
-                    <i class="bi bi-instagram"></i>
-                </a>
-                <a href="https://twitter.com/" class="linkrrss mx-2" name="Twitter" target="_blank" style="text-decoration: none; color:white">
-                    <i class="bi bi-twitter"></i>
-                </a>
-                <a href="https://www.linkedin.com/" class="linkrrss mx-2" name="Linkedin" target="_blank" style="text-decoration: none; color:white">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://www.tiktok.com/" class="linkrrss mx-2" name="Tik Tok" target="_blank" style="text-decoration: none; color:white">
-                    <i class="bi bi-tiktok"></i>
-                </a>
-            </div>
-        </div>
-    </section>
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
+      <script>includeHTML();</script>
 </body>
 </html>
