V.0.017 - Formulario acabado y comenzado versión webapp

--- a/public/presupuesto-formulario02.html
+++ b/public/presupuesto-formulario02.html
@@ -13,20 +13,17 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link rel="stylesheet" href="../css/styles.css">
 
-    <title>Calcula tu presupuesto</title>
+    <title>Formulario enviado</title>
 </head>
 <body>
     <!--Navbar------------------------------------------------------------------------------------------>
     <div include-html="../components/nav.html"></div>
 
-    <!--Título---------------------------------------------------------------------------------------------->
-    <div include-html="../components/formulario01/form01header.html"></div>
-
-    <!--SERVICIOS-->
-    <div include-html="../components/formulario01/form01_01.html"></div>
+    <!--Exito-->
+    <div include-html="../components/formulario01/form01_02.html"></div>
 
     <!--Footer-------------------------------------------------------------------------------------->
-    <!--<div include-html="../components/footer.html"></div>-->
+    <div include-html="../components/footer.html"></div>
 
 
     <script src="../js/scripts.js"></script>
