--- a/public/webapp/index.html
+++ b/public/webapp/index.html
@@ -11,25 +11,19 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../../css/styles.css">
 
     <title>Calcula tu presupuesto</title>
 </head>
 <body>
     <!--Navbar------------------------------------------------------------------------------------------>
-    <div include-html="../components/nav.html"></div>
-
-    <!--Título---------------------------------------------------------------------------------------------->
-    <div include-html="../components/formulario01/form01header.html"></div>
-
-    <!--SERVICIOS-->
-    <div include-html="../components/formulario01/form01_01.html"></div>
-
-    <!--Footer-------------------------------------------------------------------------------------->
-    <!--<div include-html="../components/footer.html"></div>-->
+    <div include-html="../../components/webapp/nav.html"></div>
 
 
-    <script src="../js/scripts.js"></script>
+
+
+
+    <script src="../../js/scripts.js"></script>
       <script>includeHTML();</script>
 </body>
 </html>
