--- a/public/webapp/index.html
+++ b/public/webapp/index.html
@@ -15,12 +15,12 @@
 
     <title>Calcula tu presupuesto</title>
 </head>
-<body>
+<body class="d-flex flex-column" style="min-height:100vh">
     <!--Navbar------------------------------------------------------------------------------------------>
     <div include-html="../../components/webapp/nav.html"></div>
 
-
-
+    <div include-html="../../components/webapp/download-app.html" class="d-flex flex-column justify-content-between align-items-center flex-fill p-5 text-center"  style="background-image:url(https://ik.imagekit.io/ehiyh7jvx/img/Recurso%201-80.jpg?updatedAt=1691506066618);background-repeat:no-repeat; background-position:center;background-size:cover">
+    </div>
 
 
     <script src="../../js/scripts.js"></script>
